# C-Practice-Examples

./: CMakeLists.txt  README.md
CompoundInterest/: main.c
InsertionSortRandom/: main.c
MatrixMulti/: main.c
MergeSortPractice/: main.c
PrimeNumCounter/: main.c
Weekday/: main.c
