cmake_minimum_required(VERSION 3.17)
project(C_Practice_Examples C)

set(CMAKE_C_STANDARD 11)

add_executable(Weekday_main Weekday/main.c)
add_executable(PrimeNumCounter_main PrimeNumCounter/main.c)
add_executable(MergeSortPractice_main MergeSortPractice/main.c)
add_executable(MatrixMulti_main MatrixMulti/main.c)
add_executable(InsertionSortRandom_main InsertionSortRandom/main.c)
add_executable(CompoundInterest_main CompoundInterest/main.c)